# ai-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  implementation.md  issue.md  pyproject.toml  requirement.md
docs/: architecture.md  provider_decision.md
src/agent_tui/: __init__.py  agent.py  cli.py  config.py  llm.py  safety.py
src/agent_tui/tools/: __init__.py  base.py  command_tool.py  file_tools.py  registry.py
src/agent_tui/tui/: __init__.py  app.py
tests/: test_agent.py  test_cli.py  test_command_tool.py  test_config.py  test_file_tools.py  test_llm.py  test_project_scaffold.py  test_regression_coverage.py  test_safety.py  test_tools.py  test_tui.py
