[project]
name = "agent-tui"
version = "0.1.0"
description = "Terminal AI coding agent with a minimal Textual interface."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Sayanta Nandi" }
]
dependencies = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "textual>=0.66.0",
  "typer>=0.12.0",
]

[project.scripts]
agent-tui = "agent_tui.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tui"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.uv]
package = true
